Fixed jumping

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -9,7 +9,8 @@
 	background-size: 5em 5em;
 	z-index: 10;
 	border-radius: 15%;
-	margin-left: -5em;     
+	margin-left: -5em;   
+	margin-top: -2.5em;  
 }
 
 .Player-wings {
